--- a/src/app/module/patient-panel/patient-sidebar/patient-sidebar.component.html
+++ b/src/app/module/patient-panel/patient-sidebar/patient-sidebar.component.html
@@ -23,12 +23,12 @@
                             <span>Dashboard</span>
                         </a>
                     </li>
-                    <li routerLinkActive="active">
+                    <!-- <li routerLinkActive="active">
                         <a routerLink="/patient-panel/favourites">
                             <i class="fas fa-bookmark"></i>
                             <span>Favourites</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li routerLinkActive="active">
                         <a routerLink="/patient-panel/patient-profile-setting">
                             <i class="fas fa-user-cog"></i>
