--- a/src/app/module/doctors-panel/doctor-sidebar/doctor-sidebar.component.html
+++ b/src/app/module/doctors-panel/doctor-sidebar/doctor-sidebar.component.html
@@ -6,7 +6,7 @@
                 <img src="{{userDetails?.imageUrl}}" alt="User Image">
             </a>
             <div class="profile-det-info">
-                <h3>Dr. Darren Elder</h3>
+                <h3>{{ userDetails?.name  }}</h3>
 
                 <div class="patient-details">
                     <h5 class="mb-0">{{userDetails?.education}}</h5>
